# rust-ns

./: .gitignore  Cargo.toml  README.md
ns-web-service/: .env.example  .gitignore  Cargo.toml
ns-web-service/migrations/: 20221115135835_create_products_table.sql  20221115135840_create_departures_table.sql  20221115135903_create_stations_table.sql  20221115135904_create_route_stations_table.sql  20221115135910_create_messages_table.sql
ns-web-service/src/travel-information/database/: departures.rs  mod.rs  platform.rs  station.rs
ns-web-service/src/travel-information/download/: departures.rs
ns-web-service/src/travel-information/error/: errors.rs
ns-web-service/src/travel-information/handlers/: departure.rs  departures.rs  download.rs  error.rs  general.rs  mod.rs  platform.rs  station.rs
ns-web-service/src/travel-information/helpers/: date_time_helper.rs
ns-web-service/src/travel-information/models/: api_departure.rs  departure.rs  departure_data.rs  message.rs  mod.rs  ns_departure.rs  platform_data.rs  product.rs  route_station.rs  station.rs  station_data.rs
ns-web-service/src/travel-information/models/ns-api/: api_departure.rs  api_message.rs  api_product.rs  api_station.rs  (+1 more)
ns-web-service/src/travel-information/routing/: routes.rs  state.rs
ns-web-service/src/travel-information/scripts/: departures.sql
web-app/: .env  .env.example  Cargo.toml  tailwind.config.js
web-app/src/app/: errors.rs  mod.rs  routes.rs
web-app/src/app/handlers/: departures.rs  error.rs  general.rs  mod.rs  platform.rs  station.rs
web-app/src/app/models/: departure.rs  departure_list.rs  mod.rs  train_category.rs
web-app/static/: input.css  no_data.html  platform.html  station.html
web-app/static/css/: output.css
web-app/templates/: platform.html  station.html
(+4 files in other folders)
