[package]
name = "ns-web-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4.2", features = ["openssl"] }
actix-rt = "2.7.0"
dotenv = "0.15.0"
sqlx = { version = "0.6.2", default_features = false, features = ["mysql", "runtime-actix-rustls", "macros", "chrono"] }
serde = { version = "1.0.145", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
awc = { version = "3.0.1", features= ["openssl"] }
serde_json = "1.0.86"
openssl = "0.10"
fern = "0.6.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"