[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4.2", features = ["openssl"] }
actix-rt = "2.7.0"
dotenv = "0.15.0"
serde = { version = "1.0.145", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
log = "0.4.17"
env_logger = "0.9.1"
awc = "3.0.1"
serde_json = "1.0.86"
tera = "1"
actix-files = "0.6.2"